//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  account String [unique, not null]
  code String [unique]
  password String [not null]
  name String
  role Role
  roleId String
  department Department
  departmentId String
  styles Style [not null]
}

Table Department {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  code String [unique, not null]
  transferItems TransferItem [not null]
  users User [not null]
}

Table Menu {
  id String [pk]
  parentId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  key String [unique, not null]
  sort Int [not null, default: 0]
  remark String
  enabled Int [not null, default: 1]
  breadcrumb Boolean [default: false]
  ignore Boolean [default: false]
  roles MenusOnRoles [not null]
}

Table Role {
  id String [pk]
  title String [not null]
  key String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users User [not null]
  menus MenusOnRoles [not null]
}

Table MenusOnRoles {
  role Role [not null]
  roleId String [not null]
  menu Menu [not null]
  menuId String [not null]

  indexes {
    (roleId, menuId) [pk]
  }
}

Table Uploads {
  id String [pk]
  src String [not null]
  name String
  sign String [unique, not null]
  type String [default: 'image']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  parent Uploads
  parentId String
  children Uploads [not null]
}

Table Dictionary {
  id String [pk]
  title String [not null]
  key String [unique, not null]
  enabled Int [default: 1]
  sort Int [default: 0]
  remark String
  dictItems DictionaryItem [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table DictionaryItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dict Dictionary
  dictId String
  key String [unique, not null]
  title String [not null]
  enabled Int [not null, default: 1]
  sort Int [default: 0]
  remark String
}

Table Style {
  id String [pk]
  baseStyleCode String
  styleCode String [unique]
  category String
  categoryName String
  spec String
  specName String
  tech String
  techName String
  programmerId String
  programmer User
  designSrc Json
  programSrc Json
  realitySrc Json
  tags String
  remark String
  isDelete Int [default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderDetails OrderDetail [not null]
  transfers Transfer [not null]
}

Table Customer {
  id String [pk]
  name String
  telephone String
  contactsName String
  contactsPhone String
  customerCode String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders Order [not null]
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderTotalWeight Float
  orderTotalQuantity Float
  orderNumber String [unique, not null]
  orderDate DateTime
  fontPrint String
  fontPrintName String
  remark String
  transfers Transfer [not null]
  orderDetails OrderDetail [not null]
  customer Customer
  customerId String
}

Table OrderDetail {
  id String [pk]
  category String
  categoryName String
  circle String
  singleWeight Decimal
  quantity Int
  unitPrice Decimal
  totalPrice Decimal
  totalWeight Decimal
  remark String
  imgSrc String
  status Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Order
  orderId String
  style Style
  styleId String
}

Table Transfer {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quantity Decimal
  circle String
  singleWeight String
  status Int [not null, default: 0]
  remark String
  transferItems TransferItem [not null]
  order Order
  orderId String
  style Style
  styleId String
}

Table TransferItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type TransferType [not null]
  weight Decimal
  quantity Decimal
  productType String
  productTypeName String
  remark String
  department Department
  departmentId String
  transfer Transfer
  transferId Int
  isDelete Int [default: 0]
}

Enum TransferType {
  IN
  OUT
}

Ref: User.roleId > Role.id [delete: Set Null]

Ref: User.departmentId > Department.id

Ref: MenusOnRoles.roleId > Role.id

Ref: MenusOnRoles.menuId > Menu.id

Ref: Uploads.parentId - Uploads.id

Ref: DictionaryItem.dictId > Dictionary.id [delete: Set Null]

Ref: Style.programmerId > User.id [delete: Set Null]

Ref: Order.customerId > Customer.id [delete: Set Null]

Ref: OrderDetail.orderId > Order.id [delete: Set Null]

Ref: OrderDetail.styleId > Style.id [delete: Set Null]

Ref: Transfer.orderId > Order.id [delete: Set Null]

Ref: Transfer.styleId > Style.id [delete: Set Null]

Ref: TransferItem.departmentId > Department.id [delete: Set Null]

Ref: TransferItem.transferId > Transfer.id [delete: Set Null]